w-btn: fix spin alignment

--- a/src/styles/loading.css
+++ b/src/styles/loading.css
@@ -1,5 +1,6 @@
 .w-btn-loader {
     position: relative;
+    display: block;
     width: var(--size, 1rem) ;
     margin: 0 auto;
 }
